php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55649 Undefined function Bug()
Submitted: 2011-09-09 03:38 UTC Modified: 2011-09-13 07:08 UTC
From: anton dot dobkin at gmail dot com Assigned: dmitry (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.3.8 OS: Linux
Private report: No CVE-ID: None
 [2011-09-09 03:38 UTC] anton dot dobkin at gmail dot com
Description:
------------
In zend_strtod.c calls undefined function Bug() when compiled with flag DEBUG


zend_strtod.c:(.text+0x8ca): undefined reference to `Bug'
Zend/.libs/zend_strtod.o: In function `cmp':
zend_strtod.c:(.text+0x988): undefined reference to `Bug'
zend_strtod.c:(.text+0x9a8): undefined reference to `Bug'
Zend/.libs/zend_strtod.o: In function `b2d':
zend_strtod.c:(.text+0xc75): undefined reference to `Bug'
Zend/.libs/zend_strtod.o: In function `quorem':
zend_strtod.c:(.text+0xde2): undefined reference to `Bug'
Zend/.libs/zend_strtod.o:zend_strtod.c:(.text+0xec2): more undefined references 
to `Bug' follow
collect2: ld returned 1 exit status



Patches

bug55649.diff (last revision 2011-09-09 05:05 UTC by laruence@php.net)
php_undef_function_bug (last revision 2011-09-09 03:39 UTC by anton dot dobkin at gmail dot com)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-09-09 05:05 UTC] laruence@php.net
The following patch has been added/updated:

Patch Name: bug55649.diff
Revision:   1315544716
URL:        https://bugs.php.net/patch-display.php?bug=55649&patch=bug55649.diff&revision=1315544716
 [2011-09-12 03:21 UTC] laruence@php.net
-Assigned To: +Assigned To: dmitry
 [2011-09-12 03:21 UTC] laruence@php.net
dmitry plz look at this.
 [2011-09-13 07:06 UTC] dmitry@php.net
Automatic comment from SVN on behalf of dmitry
Revision: http://svn.php.net/viewvc/?view=revision&revision=316591
Log: Fixed Bug #55649 (Undefined function Bug()). (Laruence)
 [2011-09-13 07:08 UTC] dmitry@php.net
-Status: Assigned +Status: Closed
 [2011-09-13 07:08 UTC] dmitry@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:48 UTC] laruence@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4b1193a9cc705d5b989f308953ec796d67bb0f23
Log: Fixed Bug #55649 (Undefined function Bug()). (Laruence)
 [2012-07-24 23:40 UTC] rasmus@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4b1193a9cc705d5b989f308953ec796d67bb0f23
Log: Fixed Bug #55649 (Undefined function Bug()). (Laruence)
 [2013-11-17 09:36 UTC] laruence@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=4b1193a9cc705d5b989f308953ec796d67bb0f23
Log: Fixed Bug #55649 (Undefined function Bug()). (Laruence)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC