Fixed Bug #55649 (Undefined function Bug()). (Laruence)